fix body wrapper and spacing

--- a/web/app/themes/evaldomariano/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/evaldomariano/resources/assets/styles/common/_global.scss
@@ -18,6 +18,6 @@ a {
   color: $white !important;
 }
 
-.main {
+.body-wrapper {
   overflow: hidden;
 }
